altered post guest artwork test

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:eTG5kGtfiyP4Wybg@db.bkaashmfbkgfozctpgjl.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.bkaashmfbkgfozctpgjl:eTG5kGtfiyP4Wybg@aws-0-eu-west-2.pooler.supabase.com:6543/postgres
